# ProjectSetupP

./: DevPlan.md  DevProgress.md  README.md  pyproject.toml
agents/: code_review_cleanup.md  readme_update.md
docArchive/: PLAN.md  PROGRESS.md  ROADMAP.md  TESTING_PLAN.md  TEST_PHASE_2.md  TEST_PROGRESS.md
docArchive/agents/: 01-project-skeleton.md  02-proj-setup.md  03-git-setup.md  04-venv-setup.md  05-cli-config.md  06-project-init.md
src/project_setup/: __init__.py  __main__.py  cli_config.py  git_setup.py  proj_setup.py  project_init.py  venv_setup.py
tests/: __init__.py  test_cli_config.py  test_git_setup.py  test_orchestrator.py  test_venv_setup.py
